--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <main>
     <div class="container">
       <div class="main_block">
+
         <div class="join_block">
           <h1>
             Join our community
@@ -24,41 +25,45 @@
             Perfect for any developers who are serious about honing their skills.
           </p>
         </div>
-  
-        <div class="subscription_block">
-          <h2>
-            Monthly Subscription
-          </h2>
-          <div>&dollar;29 <span>per month</span></div>
-          <p>
-            Full access for less than &dollar;1 a day
-          </p>
-          <button>Sign Up</button>
+
+        <div class="down_container">
+          <div class="subscription_block">
+            <h2>
+              Monthly Subscription
+            </h2>
+            <div class="price">&dollar;29 <span>per month</span></div>
+            <p>
+              Full access for less than &dollar;1 a day
+            </p>
+            <button>Sign Up</button>
+          </div>
+    
+          <div class="why_us_block">
+            <h2>
+              Why Us
+            </h2>
+            <p>
+              Tutorials by industry experts<br>
+              Peer &amp; expert code review<br>
+              Coding exercises<br>
+              Access to our GitHub repos<br>
+              Community forum<br>
+              Flashcard decks<br>
+              New videos every week<br>
+            </p>
+          </div>
+
         </div>
-  
-        <div class="why_us_block">
-          <h2>
-            Why Us
-          </h2>
-          <p>
-            Tutorials by industry experts
-            Peer &amp; expert code review
-            Coding exercises
-            Access to our GitHub repos
-            Community forum
-            Flashcard decks
-            New videos every week
-          </p>
-        </div>
+
       </div>
     </div>
   </main>
   
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 </html>
